# hardness-engineering-strategy

./: .env.example  .gitignore  AI Agent Web Architecture.docx  CLAUDE.md  docker-compose.harness.yml  docker-compose.prod.yml  hardness-engineering user guidance.md  harness_engineering_strategy.md  pyproject.toml
.claude/: settings.json
.claude/agents/: hardness-governor.md
.claude/skills/: hardness.md
.hardness/: config.yaml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/tests/: conftest.py  test_benchmarks.py  test_context_manager.py  test_errors.py  test_evaluator.py  test_governance.py  test_governance_enhanced.py  test_health.py  test_metrics.py  test_middleware.py  test_notification.py  test_planner.py  test_rag.py  test_security.py  test_task_memory.py  test_token_optimizer.py  test_tool_registry.py
docker/: harness-orchestrator.Dockerfile  harness-sandbox.Dockerfile  sandbox-policy.json  seccomp-profile.json
docker/alertmanager/: alertmanager.yml
docker/nginx/: nginx.conf  nginx.prod.conf
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
hardness_plugin/: __init__.py  benchmarks.py  cli.py  evaluator.py  governance.py  hooks.py  metrics.py  planner.py  project_config.py  token_optimizer.py
scripts/: dev-setup.sh
tests/: conftest.py  test_benchmarks.py  test_evaluator.py  test_governance.py  test_metrics.py  test_planner.py  test_task_memory.py  test_token_optimizer.py  test_tool_registry.py
(+65 files in other folders)
